<resources>
    <string name="app_name">Arenda</string>
    <string name="todo">TODO</string>
    <string-array name="previewDescription">
        <item>Площадка объявлений, на которой любой пользователь сможет заработать</item>
        <item>Никакого обмана чистая прибыль, отвичаю!!! ;)</item>
        <item>Супер пупер приложение</item>
        <item>Конец, а кто смотрел молодец!!!</item>
    </string-array>
    <string name="error_empty_field">Пустое поле</string>
    <string name="error_on_server">Ошибка на сервере</string>
    <string name="error_wrong_password">Неверный пароль</string>
    <string name="error_select_category">Выберите категорию</string>
    <string name="error_confirm_password">Пароли не совпадают</string>
    <string name="error_incorrect_chars">Некорректные символы</string>
    <string name="error_proposal_not_found">Заявка не найдена</string>
    <string name="error_user_not_found">Пользователь не найден</string>
    <string name="error_send_message">Ошибка отправки сообщения</string>
    <string name="error_recipient_not_found">Получатель не найден</string>
    <string name="error_please_select_category">Выберите категорию</string>
    <string name="error_chat_connect">Не удалось подключиться к чату</string>
    <string name="error_incorrect_format_email">Неверный формат почты</string>
    <string name="error_unsuccess_accept_proposal">Неудалось принять заявку</string>
    <string name="error_fail_load_list">Ошибка: не удалось загрузить список</string>
    <string name="error_unsuccess_reject_proposal">Неудалось отклонить заявку</string>
    <string name="error_weak_password">Пароль должен быть не менее 6 символов</string>
    <string name="error_user_disabled">Ваша учетная запись временно отключена</string>
    <string name="error_user_exists">Пользователь с такой почтой уже существует</string>
    <string name="error_please_choose_correct_img">Не верный формат изображения</string>
    <string name="error_adding_photos">Ошибка: не удалось добавить изображения\n</string>
    <string name="error_user_login_exists">Пользоваель с таким логином уже существует</string>
    <string name="error_adding_announcement">Ошибка: не удалось добавить объявление\n</string>
    <string name="error_insert_to_favorite">Ошибка: не удалось добавить в избранное/n</string>
    <string name="error_fail_load_categories">Ошибка: не удалось загрузить категории\n</string>
    <string name="error_server_connect">Ошибка: не удалось подключится к базе данных\n</string>
    <string name="error_server_is_temporarily_unavailable">Сервер временно не доступен</string>
    <string name="error_fail_loading_announcement">Ошибка: не удалось загрузить объявление\n</string>
    <string name="error_fail_loading_announcements">Ошибка: не удалось загрузить объявления\n</string>
    <string name="error_send_photo_to_server">Ошибка: не удалось отправить изображения на сервер</string>
    <string name="error_check_internet_connect">Проверьте интернет соединение и повторите попытку</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="warning_proposal_accept">Заявка принята</string>
    <string name="warning_proposal_reject">Заявка отклонена</string>
    <string name="warning_login_required">Требуется авторизация</string>
    <string name="success_photos_loaded">Изображения загружены</string>
    <string name="success_announcement_added">Объявление создано</string>
    <string name="header_registration">Регистрация</string>
    <string name="header_authorization">Авторизация</string>
    <string name="ab_title_proposals">Заявки</string>
    <string name="ab_title_messages">Сообщения</string>
    <string name="ab_title_favorites">Избранные</string>
    <string name="ab_title_statistics">Статистика</string>
    <string name="ab_title_all_announcements">Все объявления</string>
    <string name="ab_title_user_announcements">Мои объявления</string>
    <string name="ab_title_new_announcements">Новое объявление</string>
    <string name="ab_title_select_category">Выберите категорию</string>
    <string name="itemList_wallet">Кошелек</string>
    <string name="itemList_services">Услуги</string>
    <string name="itemList_proposals">Заявки</string>
    <string name="itemList_message">Сообщения</string>
    <string name="itemList_messages">Сообщения</string>
    <string name="itemList_favorites">Избранные</string>
    <string name="itemList_regulations">Правила</string>
    <string name="itemList_statistics">Статистика</string>
    <string name="itemList_customer_service">Обратная связь</string>
    <string name="itemList_all_announcements">Все объявления</string>
    <string name="itemList_user_announcements">Мои объявления</string>
    <string name="itemList_prohibited">Запрещенные товары и услуги</string>
    <string name="btn_sign">Войти</string>
    <string name="btn_logout">Выйти</string>
    <string name="btn_select">Выбрать</string>
    <string name="btn_skip">Пропустить</string>
    <string name="btn_reconnect">Повторить</string>
    <string name="btn_booking">Забронировать</string>
    <string name="btn_text_message">Сообщения</string>
    <string name="btn_text_start_proposal">Начать</string>
    <string name="btn_text_follow">Подписаться</string>
    <string name="btn_insert_phone">Добавить номер</string>
    <string name="btn_text_accept_proposal">Принять</string>
    <string name="btn_insert_address">Добавить адрес</string>
    <string name="btn_registration_auth">Регистрация</string>
    <string name="btn_text_finish_proposal">Завершить</string>
    <string name="btn_text_reject_proposal">Отклонить</string>
    <string name="btn_text_sign_google">Войти через Google</string>
    <string name="btn_registration_reg">Зарегистрироваться</string>
    <string name="btn_confirm_phone_validation">Подтвердить</string>
    <string name="btn_create_announcement">Создать объявление</string>
    <string name="radio_btn_business">Бизнес</string>
    <string name="radio_btn_private_person">Частное лицо</string>
    <string name="check_box_with_sale">Возможно с продажей</string>
    <string name="hint_code">Код</string>
    <string name="hint_email">Email</string>
    <string name="hint_login">Логин</string>
    <string name="hint_user_name">Имя</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_cost_product">0.00</string>
    <string name="hint_field_search">Поиск</string>
    <string name="hint_address">Город, улица</string>
    <string name="hint_product_name">Название</string>
    <string name="hint_get_code">Получить код</string>
    <string name="hint_user_last_name">Фамилия</string>
    <string name="hint_email_login">Email/Логин</string>
    <string name="hint_phone">+375(__)___-__-__</string>
    <string name="hint_product_description">Описание</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="hint_description_get_code">Последние 4 цифры входящего номера телефона</string>
    <string name="text_rate">Рейтинг</string>
    <string name="text_address">Адрес</string>
    <string name="text_today">Сегодня</string>
    <string name="text_count_rent">Количество аренд</string>
    <string name="text_yesterday">Вчера</string>
    <string name="textDescription">Описание</string>
    <string name="text_rate_announcement">5</string>
    <string name="text_limit_add_photos">0/9</string>
    <string name="text_user_name">Фамилия Имя</string>
    <string name="text_rent">Колличество аренд</string>
    <string name="text_published">Опубликовано: </string>
    <string name="text_some_text">Какой-то текст</string>
    <string name="text_add_photos">Добавить фотографию</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="text_hourly_cost_announcement">5 $/ч.</string>
    <string name="text_daily_cost_announcement">15 $/дн.</string>
    <string name="text_hourly_cost">Почасовая стоимость</string>
    <string name="text_made_for_people">сделано для людей</string>
    <string name="text_select_category">Выберите категорию</string>
    <string name="text_lacation_announcement">Местоположение</string>
    <string name="text_name_announcement">Название объявления</string>
    <string name="text_note_photos">Выберите главную фотографию</string>
    <string name="text_placement_date_announcement">Сегодня, 13:21</string>
    <string name="text_additional_fields">Дополнительная информация:</string>
    <string name="text_visible_phones">Показать номера в объявлении:</string>
    <string name="text_visible_addresses">Показать адрес в объявлении:</string>
    <string name="text_reset">Сбросить</string>
    <string name="text_start_rent">С</string>
    <string name="text_three_dots">…</string>
    <string name="text_end_rent">По</string>
    <string name="text_find_near_free_dates">Найти ближайшие свободные даты</string>
    <string name="text_min_time">Мин. время аренды</string>
    <string name="text_1Hour">1 час.</string>
    <string name="text_24Hour">24 час.</string>
    <string name="text_min_day">Мин. кол. дней аренды</string>
    <string name="text_1Day">1 дн.</string>
    <string name="text_31Day">31 дн.</string>
    <string name="text_max_rental_period">Макс. срок аренды</string>
    <string name="text_1Month">1 мес.</string>
    <string name="text_12Months">12 мес.</string>
    <string name="text_time_issue">Время выдачи</string>
    <string name="text_Time_00">00:00</string>
    <string name="text_Time_23">23:00</string>
    <string name="text_return_time">Время возврата</string>
    <string name="text_short_hour">час.</string>
    <string name="text_short_day">дн.</string>
    <string name="text_short_month">мес.</string>
    <string name="text_time_inflater">:00</string>
    <string name="text_cost_usd_in_hourly">$/ч.</string>
    <string name="text_cost_usd_in_daily">$/дн.</string>
    <string name="text_with_sale">Возможно с продажей</string>
    <string name="text_booking_success">Бронирование успешно</string>
    <string name="text_select_period_rental">Выберите период аренды</string>
    <string name="text_select_picture">Выберите изображение</string>
    <string name="text_view_reviews">Показать отзывы</string>
    <string name="text_camera">Камера</string>
    <string name="text_galery">Галерея</string>
    <string name="text_placed_ads">Объявлений:</string>
    <string name="text_authorization_user">На площадке с</string>
    <string name="text_updated">Обновлен:</string>
    <string name="text_some_number">34</string>
    <string name="text_daily_cost">Дневная стоимость</string>
    <string name="text_user_following">Подписки</string>
    <string name="text_add_comment">Добавить комментарий…</string>
    <string name="text_user_followers">Подписчики</string>
    <string name="text_count_user_announcements">Объявлений</string>
    <string name="text_view_all_comments">Посмотреть все комментарии</string>
    <string name="text_save">Сохранить</string>
    <string name="text_without_address">Без адреса</string>
    <string name="text_message">Сообщение</string>
    <string name="text_online">online</string>
    <string name="text_cancle">Отмена</string>
    <string name="text_request_reschedule_reservation">Запрос на перенос брони</string>
    <string name="text_cancle_reservation">Отменить бронь</string>
    <string name="short_monday">Пн</string>
    <string name="short_tuesday">Вт</string>
    <string name="short_wednesday">Ср</string>
    <string name="short_thursday">Чт</string>
    <string name="short_friday">Пт</string>
    <string name="short_saturday">Сб</string>
    <string name="short_sunday">Вс</string>
    <string name="full_monday">Понедельник</string>
    <string name="full_tuesday">Вторник</string>
    <string name="full_wednesday">Среда</string>
    <string name="full_thursday">Четверг</string>
    <string name="full_friday">Пятница</string>
    <string name="full_saturday">Суббота</string>
</resources>