<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/calendar_title_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_monday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_tuesday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_wednesday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_thursday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_friday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_saturday"
            android:textSize="@dimen/calendarSizeTitleDays" />

        <TextView
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/short_sunday"
            android:textSize="@dimen/calendarSizeTitleDays" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monthRecycler"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@+id/calendar_title_days"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:scrollbars="none" />
</RelativeLayout>