<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemUserCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/userCardAvatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_item_user_logo" />

        <TextView
            android:id="@+id/userCardLogin"
            style="@style/DefaultStyleTextBoldRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/userCardAvatar"
            android:text="@string/hint_login" />

        <TextView
            android:id="@+id/userCardRating"
            style="@style/DefaultStyleTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userCardLogin"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/userCardAvatar"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/text_rate"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/titlePlacedAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userCardAvatar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp">

            <TextView
                style="@style/DefaultStyleTextBoldRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_placed_ads" />

            <TextView
                android:id="@+id/userCardCountAnnouncements"
                style="@style/DefaultStyleTextBoldRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_some_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titlePlacedAds"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp">

            <TextView
                style="@style/DefaultStyleTextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_authorization_user"
                android:textColor="@color/colorHint"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/userCardUserCreated"
                style="@style/DefaultStyleTextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_placement_date_announcement"
                android:textColor="@color/colorHint"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>