<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutActivityRegistration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context="com.application.trust.EntrySystem.Activities.ActivityRegistration">

    <ImageView
        android:id="@+id/imagePinReg"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/gotham_office_bold_regular"
        android:text="@string/header_registration"
        android:textColor="@color/colorHeaderName"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePinReg"
        app:layout_constraintEnd_toEndOf="@+id/imagePinReg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/imagePinReg"
        app:layout_constraintTop_toTopOf="@+id/imagePinReg" />

    <ScrollView
        android:id="@+id/scrollViewReg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePinReg"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:id="@+id/containerInScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                style="@style/DefaultStyleRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rBtnPrivatePerson"
                    style="@style/DefaultStyleRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_btn_private_person"
                    tools:ignore="RtlHardcoded" />

                <RadioButton
                    android:id="@+id/rBtnBusiness"
                    style="@style/DefaultStyleRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:text="@string/radio_btn_business"
                    tools:ignore="RtlHardcoded" />
            </RadioGroup>

            <EditText
                android:id="@+id/fieldNameReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_user_name"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldLastNameReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_user_last_name"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldEmailReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldPassReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldPhoneReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldCodeReg"
                style="@style/DefaultStyleField"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:maxLength="4"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/descriptionGetCodeReg"
                    style="@style/DefaultStyleTextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:text="@string/hint_description_get_code"
                    android:textSize="10sp"
                    tools:ignore="InefficientWeight,RtlHardcoded,SmallSp" />

                <Button
                    android:id="@+id/btnGetCodeReg"
                    style="@style/DefaultStyleSecondaryBtn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="24dp"
                    android:text="@string/hint_get_code"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnReg"
                    style="@style/DefaultStylePrimaryBtn"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal|center"
                    android:text="@string/btn_registration_reg" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>