<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context="com.application.arenda.EntrySystem.ActivityAuthorization">

    <ImageView
        android:id="@+id/imagePinAuth"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/gotham_office_bold_regular"
        android:text="@string/header_authorization"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePinAuth"
        app:layout_constraintEnd_toEndOf="@+id/imagePinAuth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imagePinAuth"
        app:layout_constraintTop_toTopOf="@+id/imagePinAuth" />

    <EditText
        android:id="@+id/fieldEmailAuth"
        style="@style/DefaultStyleField"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/fieldPassAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/fieldPassAuth"
        style="@style/DefaultStyleField"
        android:layout_width="0dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/btnSignAuth"
        style="@style/DefaultStylePrimaryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/btn_sign"
        app:layout_constraintEnd_toEndOf="@+id/fieldPassAuth"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassAuth" />

    <Button
        android:id="@+id/btnRegAuth"
        style="@style/DefaultStyleSecondaryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registration_auth"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignAuth"
        app:layout_constraintStart_toStartOf="@+id/fieldPassAuth"
        app:layout_constraintTop_toTopOf="@+id/btnSignAuth" />

    <ProgressBar
        android:id="@+id/progressBarAuth"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>