<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patternLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/itemBtnBack"
        android:layout_width="@dimen/sizeBtnActionBar"
        android:layout_height="@dimen/sizeBtnActionBar"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_background_dark"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ab_item_back_black" />

    <TextView
        android:id="@+id/itemUserLogin"
        style="@style/DefaultStyleTextBoldRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemBtnBack"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/hint_login" />

    <TextView
        android:id="@+id/itemBtnSave"
        style="@style/DefaultStyleTextBoldRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_save"
        android:textColor="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>